[gd_scene load_steps=9 format=3 uid="uid://ddlkweps1y0bn"]

[ext_resource type="Script" path="res://scripts/menus/score.gd" id="1_hy5d2"]
[ext_resource type="FontFile" uid="uid://cahhshh5yubg0" path="res://assets/fonts/Lacquer-Regular.ttf" id="1_rhc5k"]
[ext_resource type="AudioStream" uid="uid://cnmtgydobjoci" path="res://assets/audio/menu_button.ogg" id="3_eqyft"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_to7ef"]

[sub_resource type="Animation" id="Animation_s7kdy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_g4pk7"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_nipmj"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7nr0"]
_data = {
"RESET": SubResource("Animation_s7kdy"),
"fade_in": SubResource("Animation_g4pk7"),
"fade_out": SubResource("Animation_nipmj")
}

[node name="score" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hy5d2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.0
offset_right = 155.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_rhc5k")
theme_override_font_sizes/font_size = 100
text = "Results"

[node name="score_breakdown" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -207.0
offset_right = 248.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_rhc5k")
theme_override_font_sizes/font_size = 60
text = "Score Breakdown:"

[node name="score_formula" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = -137.0
offset_right = 533.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_rhc5k")
theme_override_font_sizes/font_size = 45
text = "1000 - {enemies stunned * 10} - {time to win}"

[node name="high_score_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -466.0
offset_top = 12.0
offset_right = -134.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_rhc5k")
theme_override_font_sizes/font_size = 60
text = "High Score: "

[node name="high_score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -438.5
offset_top = 81.0
offset_right = -161.5
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_rhc5k")
theme_override_font_sizes/font_size = 50
text = "0
"
horizontal_alignment = 1

[node name="total_score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 83.0
offset_top = 21.0
offset_right = 429.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_rhc5k")
theme_override_font_sizes/font_size = 60
text = "Total Score:"
horizontal_alignment = 1

[node name="score" type="Label" parent="total_score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 42.0
offset_right = 93.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_rhc5k")
theme_override_font_sizes/font_size = 50
text = "0
"
horizontal_alignment = 1

[node name="back_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = 237.0
offset_right = 59.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0195435
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.469494, 0.401435, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_rhc5k")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_to7ef")
text = "Back"
flat = true

[node name="button_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_eqyft")
volume_db = -10.0
bus = &"Menu"

[node name="fade_rect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="fade_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s7nr0")
}

[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
